[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortress"
version = "2.0.0"
description = "ðŸ° Fortress - A cryptographically secure password generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hatim El Hassak", email = "hatim@example.com" }
]
keywords = [
    "password",
    "generator",
    "security",
    "cryptography",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = ["fortress[cli,dev]"]

[project.scripts]
fortress = "fortress.cli:main"

[project.urls]
Homepage = "https://github.com/hatimhtm/Fortress"
Documentation = "https://github.com/hatimhtm/Fortress#readme"
Repository = "https://github.com/hatimhtm/Fortress"
Issues = "https://github.com/hatimhtm/Fortress/issues"

[tool.hatch.build.targets.wheel]
packages = ["fortress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=fortress --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
